--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,25 @@
     border-radius: 0;
 }
 
+.ui.card>.content>.image {
+    position: relative;
+    display: block;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    padding: 0;
+    background: rgba(0, 0, 0, .05);
+    margin: -1em -1em 0 -1em;
+}
+
+.ui.card>.content>.image>img {
+    width: 100%;
+}
+
+.ui.card>.content>.description {
+    padding-top: 0.5em;
+}
+
 
 /* COMMMENT */
 
